--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -4,7 +4,7 @@ rebaseMergeAllowed: true
 
 # Whether or not squash-merging is enabled on this repository.
 # Defaults to `true`
-squashMergeAllowed: true
+squashMergeAllowed: false
 
 # Whether or not PRs are merged with a merge commit on this repository.
 # Defaults to `false`
