--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -1,6 +1,6 @@
 # Whether or not rebase-merging is enabled on this repository.
 # Defaults to `true`
-rebaseMergeAllowed: true
+rebaseMergeAllowed: false
 
 # Whether or not squash-merging is enabled on this repository.
 # Defaults to `true`
@@ -8,4 +8,4 @@ squashMergeAllowed: true
 
 # Whether or not PRs are merged with a merge commit on this repository.
 # Defaults to `false`
-mergeCommitAllowed: true
+mergeCommitAllowed: false
